test/src/e2e_vm_tests/test_programs/should_fail/dbg_two_args/src/main.sw
script;

fn main() {
    let _ = __dbg(1, 2);
}
